--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,41 @@
 /* general */
-body {background-color: #024A68}
+body {
+	margin: 0;
+	background-color: #FFFFFF;
+}
 a {
-	color: #024A68;
+	color: #2A3957;
 	text-decoration: none;
 }
 a:hover {text-decoration: underline}
 h1 {
-	margin: 1em;
-	text-align: center;
-	font-size: 12pt;
+	margin: 1.5em 0 0.5em 0;
+	font-size: 16pt;
 	font-weight: bold;
-	color: #024A68;
+	color: #2A3957;
 }
-h2 {
-	font-size: 12pt;
-	font-weight: bold;
-	color: #024A68;
+li {padding: 0.35em 0}
+fieldset {
+	display: inline-block;
+	border: 2px solid #BFBFBF;
 }
-li {padding: 0.35em 0;}
-fieldset {display: inline-block}
 select {vertical-align: top}
 table {border-collapse: collapse}
-table.center {
-	margin-left: auto;
-	margin-right: auto;
-}
 th, td {
 	padding: 0.25em 0.75em;
 	text-align: center;
 }
 th {
-	background-color: #E7E7E7;
+	background-color: #EFEFEF;
 	font-weight: normal;
 	font-style: italic;
 }
-td {background-color: #F9F9F9}
 td.leftAlign {text-align: left}
 td.rightAlign {text-align: right}
 td.strikethrough {text-decoration: line-through}
-tr.altRow td {background-color: #E7E7E7}
+tr.altRow td {background-color: #EFEFEF}
 .error {color: #AB0000}
-.gray {color: #9C9C9C}
+.gray {color: #7F7F7F}
 .code {
 	display: inline-block;
 	margin: 1em 0;
@@ -54,81 +49,99 @@ tr.altRow td {background-color: #E7E7E7}
 }
 .submitButton {
 	border: 1px solid #000000;
-	margin:0;
+	margin: 0;
 	display: inline-block;
 	padding: 0.25em 0.5em;
 	cursor: pointer;
-	background-color: #D9D9D9;
+	background-color: #EFEFEF;
 	font-size: 12pt;
 	font-weight: bold;
 	text-decoration: none;
 	font-family: sans-serif;
 }
-.submitButton:hover {background-color: #63AFD0}
+.submitButton:hover {
+	background-color: #0055A2;
+	color: #FFFFFF
+}
 .smallSubmitButton {
 	border: 1px solid #000000;
-	margin:0;
+	margin: 0;
 	display: inline-block;
 	padding: 0.25em 0.5em;
 	cursor: pointer;
-	background-color: #D9D9D9;
+	background-color: #EFEFEF;
 	font-size: 10pt;
 	text-decoration: none;
 	font-family: sans-serif;
 }
-.smallSubmitButton:hover {background-color: #63AFD0}
+.smallSubmitButton:hover {
+	background-color: #0055A2;
+	color: #FFFFFF;
+}
 
 /* page layout */
 .headerBox {
-	width: 80%;
-	margin-top: 1em;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 1em;
-	border: 1px solid #333333;
-	background-color: #F9F9F9;
-	text-align: center;
-	font-size: 24pt;
+	margin: 0;
+	padding: 0.5em 0.75em;
+	text-align: left;
+	font-size: 28pt;
 	font-weight: bold;
 	font-family: sans-serif;
-	color: #024A68;
+	color: #2A3957;
+}
+.headerBox img {
+	vertical-align: middle;
+	margin-right: 0.25em;
 }
 ul.headerButtons {
 	margin: 0;
-	padding: 0;
+	padding: 0 0 0 3.5em;
 	list-style: none;
-	text-align: center;
+	background-color: #2A3957;
 }
 ul.headerButtons li {
 	display: inline-block;
-	margin-top: 2em;
-	margin-left: 1em;
-	margin-right: 1em;
+	margin: 0;
 	padding: 0;
-	border: 1px solid #333333;
+	text-align: center;
 }
 ul.headerButtons a {
 	display: inline-block;
-	width: 7em;
-	padding: 0.25em;
-	background-color: #F9F9F9;
+	padding: 1em 2.0em;
+	background-color: #2A3957;
 	font-size: 12pt;
 	font-weight: bold;
 	text-decoration: none;
 	font-family: sans-serif;
-	color: #024A68;
+	color: #FFFFFF;
 }
-ul.headerButtons a:hover {background-color: #63AFD0}
+ul.headerButtons a.current {
+	background-color: #FFFFFF;
+	color: #2A3957;
+}
+ul.headerButtons a:hover {
+	background-color: #0055A2;
+	color: #FFFFFF;
+}
 .mainContent {
-	width: 80%;
-	margin: 2em auto 1em auto;
-	padding: 0.5em 2em 2em 2em;
-	border: 1px solid #333333;
-	background-color: #F9F9F9;
+	padding: 0.5em 2.5em 4em 2.5em;
 	line-height: 150%;
 	font-size: 12pt;
 	font-family: sans-serif;
 }
+.footerBox {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	margin: 0;
+	padding: 0.75em 0.75em;
+	text-align: center;
+	font-size: 8pt;
+	font-family: sans-serif;
+	background-color: #2A3957;
+	color: #FFFFFF;
+}
+.footerBox a {color: #FFFFFF}
 
 /* elimination bracket table */
 table.bracket {border-collapse: collapse}
