--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
 body {
 	margin: 0;
 	background-color: #FFFFFF;
+	display: inline-block;
+	min-width: 100%;
 }
 a {
 	color: #2A3957;
@@ -84,6 +86,7 @@ tr.altRow td {background-color: #EFEFEF}
 	margin: 0;
 	padding: 0.5em 0.75em;
 	text-align: left;
+	white-space: nowrap;
 	font-size: 28pt;
 	font-weight: bold;
 	font-family: sans-serif;
@@ -97,6 +100,7 @@ ul.headerButtons {
 	margin: 0;
 	padding: 0 0 0 3.5em;
 	list-style: none;
+	white-space: nowrap;
 	background-color: #2A3957;
 }
 ul.headerButtons li {
@@ -107,7 +111,7 @@ ul.headerButtons li {
 }
 ul.headerButtons a {
 	display: inline-block;
-	padding: 1em 2.0em;
+	padding: 1em 1.45em;
 	background-color: #2A3957;
 	font-size: 12pt;
 	font-weight: bold;
